Add video content to diagnose page

--- a/index.html
+++ b/index.html
@@ -183,17 +183,42 @@
 
     <div id="slideshow">
       <div class="slide-wrapper">
+
+        
         <div class="slide">
           <img src="assets/images/brands/schar-logo.jpg" alt="" class="slideshow-img">
         </div>
+
         <div class="slide">
           <img src="assets/images/brands/yoplait-logo.jpg" alt="" class="slideshow-img">
         </div>
+
         <div class="slide">
           <img src="assets/images/brands/free-from-tesco-brand.jpg" alt="" class="slideshow-img">
         </div>
+
         <div class="slide">
           <img src="assets/images/brands/promise-logo.png" alt="" class="slideshow-img">
+        </div>
+
+        <div class="slide">
+          <img src="assets/images/brands/red-mill-logo.jpg" alt="" class="slideshow-img">
+        </div>
+
+        <div class="slide">
+          <img src="assets/images/brands/livegfree_logo.jpg" alt="" class="slideshow-img">
+        </div>
+
+        <div class="slide">
+          <img src="assets/images/brands/nairns-logo.png" alt="" class="slideshow-img">
+        </div>
+
+        <div class="slide">
+          <img src="assets/images/brands/nakd-logo.jpg" alt="" class="slideshow-img">
+        </div>
+
+        <div class="slide">
+          <img src="assets/images/brands/barilla-logo.jpg" alt="" class="slideshow-img">
         </div>
       </div>
     </div>
