--- a/diagnose.html
+++ b/diagnose.html
@@ -83,12 +83,15 @@
   <!-- Main Section -->
   <main>
 
-
     <div class="container">
       <div class="row g-2">
         <div class="col-12">
           <div class="card card-light" id="card1">
-            <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
+            <!-- <img src="assets/images/Symptoms.webp" class="card-img-top" alt="..."> -->
+
+            <iframe src="https://www.youtube.com/embed/ViJhwkjkt3g?si=osFYLu9uOisUsTTi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video-player"></iframe>
+
+
             <div class="card-body">
               <h3 class="card-title dark-text"><strong>Diagnosing Celiac Disease and Gluten Intolerance</strong></h3>
               <p class="card-text dark-text">Understanding whether you have celiac disease or gluten intolerance is
