Update video coplayer to diagnose page

--- a/diagnose.html
+++ b/diagnose.html
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row g-2">
         <div class="col-12">
-          <div class="card card-light" id="card1">
+          <div class="card card-light" id="diagnose-card">
             <!-- <img src="assets/images/Symptoms.webp" class="card-img-top" alt="..."> -->
 
             <iframe src="https://www.youtube.com/embed/ViJhwkjkt3g?si=osFYLu9uOisUsTTi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video-player"></iframe>
