Update about and privacy-policy links

--- a/diagnose.html
+++ b/diagnose.html
@@ -405,12 +405,12 @@
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="about.html" rel="noopener" aria-label="">
           About</a>
       </li>
 
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="privacy-policy.html" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
 
