--- a/recipe.html
+++ b/recipe.html
@@ -276,14 +276,14 @@
     <footer>
         <ul id="footer-bar">
             <li>
-                <a href="#" rel="noopener" aria-label="">
-                    About</a>
-            </li>
-
-            <li>
-                <a href="#" rel="noopener" aria-label="">
-                    Privacy Policy</a>
-            </li>
+                <a href="about.html" rel="noopener" aria-label="">
+                  About</a>
+              </li>
+        
+              <li>
+                <a href="privacy-policy.html" rel="noopener" aria-label="">
+                  Privacy Policy</a>
+              </li>
 
             <li>
                 <a href="#" rel="noopener" aria-label="">
