--- a/recipes.html
+++ b/recipes.html
@@ -180,15 +180,14 @@
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="about.html" rel="noopener" aria-label="">
           About</a>
       </li>
 
       <li>
-        <a href="#" rel="noopener" aria-label="">
+        <a href="privacy-policy.html" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
-
       <li>
         <a href="#" rel="noopener" aria-label="">
           Contact Us</a>
