Add github and linkedin icons to footer bar

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div id="slideshow">
       <div class="slide-wrapper">
 
-        
+
         <div class="slide">
           <img src="assets/images/brands/schar-logo.jpg" alt="" class="slideshow-img">
         </div>
@@ -229,21 +229,32 @@
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
+
+      <li>
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </li>
+
+      <li>
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-linkedin-in"></i>  
+        </a>
+
+      </li>
       <li>
         <a href="about.html" rel="noopener" aria-label="">
-          About</a>
+          <i class="fa-solid fa-circle-info"></i>  
+        </a>
       </li>
 
       <li>
         <a href="privacy-policy.html" rel="noopener" aria-label="">
-          Privacy Policy</a>
+          <i class="fas fa-file-signature"></i>
+        </a>
       </li>
 
-      <li>
-        <a href="#" rel="noopener" aria-label="">
-          Contact Us</a>
 
-      </li>
     </ul>
 
 
