--- a/celebrities.html
+++ b/celebrities.html
@@ -189,7 +189,7 @@
                     <a href="https://en.wikipedia.org/wiki/Hend_Sabry" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/hend-sabry.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/hend-sabry.jpeg" class="celebrity-img" alt="...">
                                 <div class="card-body">
                                 <h3 class="card-title dark-text">Hend Sabry</h3>
                                 </div>
