--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -84,7 +84,7 @@
         <div id="privacy-policy-div">
         <h1>Privacy Policy</h1>
 
-        <p><strong>Effective Date:</strong> [Insert Date]</p>
+        <p><strong>Effective Date:</strong> Sep,15 2024</p>
 
         <p>At GLUTENIPEDIA, we are committed to protecting your privacy and ensuring that your personal information is handled safely and responsibly. This Privacy Policy outlines how we collect, use, and protect your information when you visit our website.</p>
 
