Unify footbar to all pages

--- a/about.html
+++ b/about.html
@@ -127,24 +127,32 @@
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
-      <li>
-        <a href="#" rel="noopener"
-          aria-label="">
-          <strong><u>About</u></strong></a>
-      </li>
 
 
       <li>
-        <a href="privacy-policy.html" rel="noopener"
-          aria-label="">
-          Privacy Policy</a>
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
-          Contact Us</a>
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-linkedin-in"></i>  
+        </a>
       </li>
+
+      <li>
+        <a href="#" rel="noopener" aria-label="">
+          <i class="fa-solid fa-circle-info"></i>  
+        </a>
+      </li>
+
+      <li>
+        <a href="privacy-policy.html" rel="noopener" aria-label="">
+          <i class="fas fa-file-signature"></i>
+        </a>
+      </li>
+
     </ul>
   </footer>
 </body>
