--- a/diagnose.html
+++ b/diagnose.html
@@ -405,18 +405,27 @@
   <footer>
     <ul id="footer-bar">
       <li>
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </li>
+
+      <li>
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-linkedin-in"></i>  
+        </a>
+      </li>
+
+      <li>
         <a href="about.html" rel="noopener" aria-label="">
-          About</a>
+          <i class="fa-solid fa-circle-info"></i>  
+        </a>
       </li>
 
       <li>
         <a href="privacy-policy.html" rel="noopener" aria-label="">
-          Privacy Policy</a>
-      </li>
-
-      <li>
-        <a href="#" rel="noopener" aria-label="">
-          Contact Us</a>
+          <i class="fas fa-file-signature"></i>
+        </a>
       </li>
 
     </ul>
