--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -133,23 +133,27 @@
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="about.html" rel="noopener"
-          aria-label="">
-          About</a>
-      </li>
-
-
-      <li>
-        <a href="#" rel="noopener"
-          aria-label="">
-          <strong><u>Privacy Policy</u></strong></a>
-
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
-          Contact Us</a>
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="">
+          <i class="fa-brands fa-linkedin-in"></i>  
+        </a>
+      </li>
+
+      <li>
+        <a href="about.html" rel="noopener" aria-label="">
+          <i class="fa-solid fa-circle-info"></i>  
+        </a>
+      </li>
+
+      <li>
+        <a href="#" rel="noopener" aria-label="">
+          <i class="fas fa-file-signature"></i>
+        </a>
       </li>
     </ul>
   </footer>
