--- a/recipes.html
+++ b/recipes.html
@@ -43,13 +43,16 @@
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
           <p>GluteniPedia</p>
         </a>
+        <!-- Make the menu button clickable to open and hide the menu-->
         <input id="menu-button" type="checkbox">
         <label for="menu-button">
           <span class="navbar-toggler">
             <span class="fas fa-bars menu-button-open"></span>
             <span class="fas fa-xmark menu-button-close"></span>
           </span>
+        </label>
 
+        <!-- Menu items -->
         </label>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -75,7 +78,6 @@
         </div>
       </div>
     </nav>
-
   </header>
 
   <!-- Main Section -->
@@ -179,32 +181,33 @@
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
+
       <li>
-        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="">
+        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
           <i class="fa-brands fa-github"></i>
         </a>
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="">
-          <i class="fa-brands fa-linkedin-in"></i>  
+        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
+          <i class="fa-brands fa-linkedin-in"></i>
         </a>
       </li>
 
       <li>
-        <a href="about.html" rel="noopener" aria-label="">
-          <i class="fa-solid fa-circle-info"></i>  
+        <a href="about.html" rel="noopener" aria-label="about us">
+          <i class="fa-solid fa-circle-info"></i>
         </a>
       </li>
 
       <li>
-        <a href="privacy-policy.html" rel="noopener" aria-label="">
+        <a href="privacy-policy.html" rel="noopener" aria-label="our privacy policy">
           <i class="fas fa-file-signature"></i>
         </a>
       </li>
+
     </ul>
   </footer>
-
 
 </body>
 
