--- a/diagnose.html
+++ b/diagnose.html
@@ -43,16 +43,16 @@
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
           <p>GluteniPedia</p>
         </a>
-
+        <!-- Make the menu button clickable to open and hide the menu-->
         <input id="menu-button" type="checkbox">
         <label for="menu-button">
           <span class="navbar-toggler">
             <span class="fas fa-bars menu-button-open"></span>
             <span class="fas fa-xmark menu-button-close"></span>
           </span>
-
         </label>
 
+        <!-- Menu items -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
