Add animation to navbar and error page

--- a/404.html
+++ b/404.html
@@ -80,23 +80,16 @@
 
     <!-- Main Section -->
     <main>
-      <!-- Show error image and message to inform the user that the page is not found -->
-        <div id="error-div">
-            <div id="error-msg">
-            <h2 >404: This page crumbled like a gluten-free cookie! 🍪</h2>
-            <p>Don’t let it ruin your appetite! Find your way back with one of these links:</p>
-            <div>
-                <ul id="redirect-links">
-                    <li><a href="recipes.html">Browse our top gluten-free recipes</a></li>
-                    <li><a href="subscribe.html">Subscribe to GluteniPedia newsletter</a></li>
-                    <li><a href="index.html">Head back home</a></li>
-                </ul>
-            </div>
-            </div>
-            <img src="assets/images/error-404.jpg" id="error-background-img"
-                alt="subscription done successfully">
+        <div class="error-container">
+            <img src="assets/images/error-404.jpg" alt="404 Error Illustration" class="error-image">
+            <h2 class="error-message">Oops! This page crumbled like a gluten-free cookie! 🍪</h2>
+            <p class="error-description">Don't let it ruin your appetite! Find your way back with one of these links:</p>
+            <ul class="redirect-links">
+                <li><a href="recipes.html">Browse our top gluten-free recipes</a></li>
+                <li><a href="subscribe.html">Subscribe to GluteniPedia newsletter</a></li>
+                <li><a href="index.html">Head back home</a></li>
+            </ul>
         </div>
-
     </main>
 
   <!-- Footer -->
