--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="404.html">Diagnose</a>
+              <a class="nav-link" href="diagnose.html">Diagnose</a>
             </li>
 
             <li class="nav-item">
@@ -255,7 +255,7 @@
 
     </ul>
   </footer>
-
+  
 </body>
 
 </html>
