Justify the content size in  error page

--- a/subscribe.html
+++ b/subscribe.html
@@ -82,7 +82,7 @@
 
   <!-- Main Section -->
   <main id="subscribe-main">
-    <section id="subscribe">
+    <section id="subscribe" class="slide-in-up">
         <form id="subscribe-form" action="subscription-confirmation.html">
             <h2><i class="fa-solid fa-wheat-awn-circle-exclamation"></i> Let's subscribe to our monthly newsletter!</h2>
             <label for="first-name">First Name</label>
