--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 
     <!-- Main Section -->
     <main>
-        <div class="error-container">
-            <img src="assets/images/error-404.jpg" alt="404 Error Illustration" class="error-image">
-            <h2 class="error-message">Oops! This page crumbled like a gluten-free cookie! 🍪</h2>
-            <p class="error-description">Don't let it ruin your appetite! Find your way back with one of these links:</p>
-            <ul class="redirect-links">
+        <div class="error-container fade-in">
+            <img src="assets/images/error-404.jpg" alt="404 Error Illustration" class="error-image slide-in-up">
+            <h2 class="error-message slide-in-down">Oops! This page crumbled like a gluten-free cookie! 🍪</h2>
+            <p class="error-description slide-in-up">Don't let it ruin your appetite! Find your way back with one of these links:</p>
+            <ul class="redirect-links fade-in">
                 <li><a href="recipes.html">Browse our top gluten-free recipes</a></li>
                 <li><a href="subscribe.html">Subscribe to GluteniPedia newsletter</a></li>
                 <li><a href="index.html">Head back home</a></li>
