Replace celebrites and recipes top image with cartoon image to unify style

--- a/celebrities.html
+++ b/celebrities.html
@@ -84,7 +84,7 @@
     <main>
 
         <div class="card card-light" id="celebrities-header-card">
-            <img src="assets/images/fans.webp" class="card-img-top" alt="...">
+            <img src="assets/images/celebrities-fans.jpg" class="card-img-top" alt="Celebrities posing to paparazzi and walking along red carpet">
             <div class="card-body">
                 <h3 class="card-title dark-text">Celebrities and Public Figures Living Gluten-Free</h3>
                 <p class="card-text dark-text">Living with celiac disease or gluten intolerance can be challenging, but
