--- a/recipes.html
+++ b/recipes.html
@@ -86,7 +86,7 @@
     <div class="card card-light recipes-header-card">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
-        <img src="assets/images/eating-delicous.jpg" class="card-img-top" alt="...">
+        <img src="assets/images/recipes-book.jpg" class="card-img-top" alt="Tiny female chef cooking meal using recipe in kitchen">
 
         <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can try,
           whether you are looking for breakfast, lunch, dinner, or even snacks.</p>
