Add fourth and fifth recipes content

--- a/recipe.html
+++ b/recipe.html
@@ -26,8 +26,8 @@
     <!-- Linking CSS Styling -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-        <!-- Linking FontAwosome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+    <!-- Linking FontAwosome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 
 
 <body>
@@ -42,16 +42,16 @@
                 <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
                     <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
                     <p>GluteniPedia</p>
-                </a>        
+                </a>
                 <!-- Make the menu button clickable to open and hide the menu-->
                 <input id="menu-button" type="checkbox">
                 <label for="menu-button">
-                  <span class="navbar-toggler">
-                    <span class="fas fa-bars menu-button-open"></span>
-                    <span class="fas fa-xmark menu-button-close"></span>
-                  </span>
+                    <span class="navbar-toggler">
+                        <span class="fas fa-bars menu-button-open"></span>
+                        <span class="fas fa-xmark menu-button-close"></span>
+                    </span>
                 </label>
-        
+
                 <!-- Menu items -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -87,7 +87,7 @@
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
                 <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="card-img-top recipe-details-img"
-                    alt="...">
+                    alt="Cold cucumber soup">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
 
@@ -103,7 +103,7 @@
                         <li>Walnut-Cucumber Garnish</li>
                     </ul>
                     <img src="assets/images/recipes/cold-cucumber-soup-ingredients.webp"
-                        class="card-img-top recipe-details-img" alt="...">
+                        class="card-img-top recipe-details-img" alt="Cold cucumber soup ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
                         <li>
@@ -156,8 +156,8 @@
         <div class="recipe-content" id="two">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Raspberry Mousse</h3>
-                <img src="assets/images/recipes/raspberry-mousse.webp" class="card-img-top recipe-details-img"
-                    alt="...">
+                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="card-img-top recipe-details-img"
+                    alt="Raspberry mousse">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
 
@@ -170,7 +170,7 @@
                         <li>500ml whipping cream</li>
                     </ul>
                     <img src="assets/images/recipes/raspberry-mousse-ingredients.jpg"
-                        class="card-img-top recipe-details-img" alt="...">
+                        class="card-img-top recipe-details-img" alt="Raspberry mousse ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
                         <li>
@@ -212,14 +212,12 @@
         </div>
 
 
-
-
         <!-- Section for (Zucchini Lasagna) Recipe -->
         <div class="recipe-content" id="three">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Zucchini Lasagna</h3>
 
-                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img" alt="...">
+                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img" alt="Zucchini lasagna">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
 
@@ -235,7 +233,7 @@
                         <li>Egg</li>
                     </ul>
                     <img src="assets/images/recipes/zucchini-lasagna-ingredients.jpg"
-                        class="card-img-top recipe-details-img" alt="...">
+                        class="card-img-top recipe-details-img" alt="Zucchini lasagna ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
                         <li>
@@ -268,40 +266,145 @@
         </div>
 
 
+        <!-- Section for (Sweet Potato Salad) Recipe -->
+        <div class="recipe-content" id="four">
+            <div class="card card-light recipes-header-card">
+                <h3 class="card-title dark-text">Sweet Potato Salad</h3>
+
+                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="card-img-top recipe-details-img"
+                    alt="Sweet potato salad">
+                <div class="card-body">
+                    <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
+
+                    <h4 class="card-body">Ingredients:</h4>
+                    <ul>
+                        <li>Sweet Potatoes</li>
+                        <li>Olive Oil</li>
+                        <li>Seasoning</li>
+                        <li>Red Onion</li>
+                        <li>Arugula</li>
+                        <li>Avocado</li>
+                        <li>Sweet Potato Salad Dressing (Olive oil, apple cider vinegar, honey, salt, cumin)</li>
+                    </ul>
+                    <img src="assets/images/recipes/sweet-potato-salad-ingredients.webp"
+                        class="card-img-top recipe-details-img" alt="Sweet potato salad ingredients">
+                    <h4 class="card-body">Preparation:</h4>
+                    <ol>
+                        <li>
+                            <p><strong>Season the Sweet Potatoes:</strong>
+                                Combine the 4 spices in a small bowl. Drizzle the potatoes with oil and season them with
+                                the spice mix.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Roast The Sweet Potatoes:</strong> Bake the potatoes for about 30 minutes at
+                                400°F, tossing halfway through.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Make the Dressing:</strong> Whisk the vinaigrette ingredients in a large bowl and
+                                add the red onions.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Make the Salad:</strong> Add the hot sweet potatoes to the dressing and let cool
+                                for at least 5 minutes. Once cool, add the arugula and toss with olive oil and salt.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Add the Avocado:</strong> Divide the salad between 4 bowls, add more salt and
+                                pepper if needed, and top each with avocado.</p>
+                        </li>
+
+                    </ol>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Section for (Korean Chicken) Recipe -->
+        <div class="recipe-content" id="five">
+            <div class="card card-light recipes-header-card">
+                <h3 class="card-title dark-text">Korean Chicken</h3>
+
+                <img src="assets/images/recipes/korean-chicken.jpg" class="card-img-top recipe-details-img" alt="Korean chicken">
+                <div class="card-body">
+                    <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
+
+                    <h4 class="card-body">Ingredients:</h4>
+                    <ul>
+                        <li>Chicken</li>
+                        <li>Soy Sauce</li>
+                        <li>Applesauce</li>
+                        <li>Onion</li>
+                        <li>Sesame Oil</li>
+                        <li>Ginger</li>
+                        <li>Garlic</li>
+                        <li>Red Pepper Flakes</li>
+                        <li>Sesame Seeds</li>
+                        <li>Scallions</li>
+                    </ul>
+                    <img src="assets/images/recipes/korean-chicken-ingredients.jpg"
+                        class="card-img-top recipe-details-img" alt="Korean chicken ingredients">
+                    <h4 class="card-body">Preparation:</h4>
+                    <ol>
+                        <li>
+                            <p><strong>To ensure the chicken cooks evenly,</strong>
+                                place a chicken breast in a Ziploc bag and pound it to a ½-inch thickness. Be careful
+                                not to puncture the bag, and repeat with the remaining pieces.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Make the Korean BBQ Chicken Marinade:</strong> Combine all the ingredients in a
+                                medium bowl. Reserve a quarter cup for later and transfer the remainder to a plastic bag
+                                with the chicken. Refrigerate and marinate for at least an hour or up to 24.</p>
+                        </li>
+
+                        <li>
+                            <p><strong>Grill Chicken:</strong> Grill the chicken on medium-high heat for a few minutes.
+                                Then flip it over, spoon the reserved marinade over each piece, and grill another 2 to 3
+                                minutes. Sprinkle with sesame seeds and scallions before serving.</p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
 
     </main>
 
-  <!-- Footer -->
-  <footer>
-    <ul id="footer-bar">
+    <!-- Footer -->
+    <footer>
+        <ul id="footer-bar">
 
-      <li>
-        <a href="https://github.com/NourShbair/" target="_blank" rel="noopener" aria-label="github account for the site developer">
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </li>
+            <li>
+                <a href="https://github.com/NourShbair/" target="_blank" rel="noopener"
+                    aria-label="github account for the site developer">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
 
-      <li>
-        <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener" aria-label="linkedin account for the site developer">
-          <i class="fa-brands fa-linkedin-in"></i>
-        </a>
-      </li>
+            <li>
+                <a href="https://www.linkedin.com/in/nourshbair/" target="_blank" rel="noopener"
+                    aria-label="linkedin account for the site developer">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+            </li>
 
-      <li>
-        <a href="about.html" rel="noopener" aria-label="about us">
-          <i class="fa-solid fa-circle-info"></i>
-        </a>
-      </li>
+            <li>
+                <a href="about.html" rel="noopener" aria-label="about us">
+                    <i class="fa-solid fa-circle-info"></i>
+                </a>
+            </li>
 
-      <li>
-        <a href="privacy-policy.html" rel="noopener" aria-label="our privacy policy">
-          <i class="fas fa-file-signature"></i>
-        </a>
-      </li>
+            <li>
+                <a href="privacy-policy.html" rel="noopener" aria-label="our privacy policy">
+                    <i class="fas fa-file-signature"></i>
+                </a>
+            </li>
 
-    </ul>
-  </footer>
-  
+        </ul>
+    </footer>
+
 </body>
 
 </html>
