--- a/recipes.html
+++ b/recipes.html
@@ -83,7 +83,7 @@
   <!-- Main Section -->
   <main>
 
-    <div class="card card-light recipes-header-card">
+    <div class="card card-light recipes-header-card slide-in-up">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
         <img src="assets/images/recipes-book.jpg" class="card-img-top" alt="Tiny female chef cooking meal using recipe in kitchen">
@@ -115,7 +115,7 @@
           <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/raspberry-mousse.webp" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="recipe-img" alt="...">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Raspberry Mousse</h3>
                   <p>Dessert</p>
@@ -147,10 +147,10 @@
           <a href="recipe.html#four" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec1.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="recipe-img" alt="...">
                 <div class="card-body">
-                  <h3 class="card-title dark-text">Zucchini Lasagna</h3>
-                  <p>Main Dish</p>
+                  <h3 class="card-title dark-text">Sweet Potato Salad</h3>
+                  <p>Side Dish</p>
                 </div>
               </div>
             </div>
@@ -162,9 +162,9 @@
           <a href="recipe.html#five" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/rec2.jpg" class="recipe-img" alt="...">
+                <img src="assets/images/recipes/korean-chicken.jpg" class="recipe-img" alt="...">
                 <div class="card-body">
-                  <h3 class="card-title dark-text">Zucchini Lasagna</h3>
+                  <h3 class="card-title dark-text">Korean Chicken</h3>
                   <p>Main Dish</p>
                 </div>
               </div>
