Add recipe content parent class container to give it suitable margins

--- a/recipe.html
+++ b/recipe.html
@@ -80,7 +80,7 @@
     </header>
 
     <!-- Main Section -->
-    <main id="recipe-main-section">
+    <main id="recipe-main-section" class="container">
 
         <!-- Section for (Cold Cucumber Soup) Recipe -->
         <div class="recipe-content" id="one">
